07-zero-cmo-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-monitoring-operator
  namespace: openshift-monitoring
spec:
  replicas: 0
