13-scale-down-thanos-querier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-querier
  namespace: openshift-monitoring
spec:
  replicas: 0
