11-reconfigure-prom-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-k8s
  namespace: openshift-monitoring
spec:
  ports:
    - name: web
      protocol: TCP
      port: 9091
      targetPort: web
  selector:
    app: vm-to-prom-proxy
