05-vmagent-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vmagent
  namespace: openshift-monitoring
spec:
  to:
    kind: Service
    name: vmagent-vmagent
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
