16-vmselect-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: vmselect
  namespace: openshift-monitoring
spec:
  to:
    kind: Service
    name: vmselect-vmcluster
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
